// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList ItemList snapshot witch persons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="itemList"
      >
        <div
          class="itemList__wrapper"
        >
          <div
            class="person"
            data-testid="person"
          >
            <img
              class="person__img"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
            />
            <div
              class="person__info"
            >
              <h2
                class="person__name"
              >
                Rick Sanchez
              </h2>
            </div>
          </div>
          <div
            class="person"
            data-testid="person"
          >
            <img
              class="person__img"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
            />
            <div
              class="person__info"
            >
              <h2
                class="person__name"
              >
                Rick Sanchez
              </h2>
            </div>
          </div>
          <div
            class="person"
            data-testid="person"
          >
            <img
              class="person__img"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
            />
            <div
              class="person__info"
            >
              <h2
                class="person__name"
              >
                Rick Sanchez
              </h2>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="itemList"
    >
      <div
        class="itemList__wrapper"
      >
        <div
          class="person"
          data-testid="person"
        >
          <img
            class="person__img"
            src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
          />
          <div
            class="person__info"
          >
            <h2
              class="person__name"
            >
              Rick Sanchez
            </h2>
          </div>
        </div>
        <div
          class="person"
          data-testid="person"
        >
          <img
            class="person__img"
            src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
          />
          <div
            class="person__info"
          >
            <h2
              class="person__name"
            >
              Rick Sanchez
            </h2>
          </div>
        </div>
        <div
          class="person"
          data-testid="person"
        >
          <img
            class="person__img"
            src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
          />
          <div
            class="person__info"
          >
            <h2
              class="person__name"
            >
              Rick Sanchez
            </h2>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemList ItemList snapshot witch users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="itemList"
      >
        <div
          class="itemList__wrapper"
        >
          <div
            class="user"
          >
            <img
              class="user__img"
            />
            <div
              class="user__info"
            >
              <h2
                class="user__name"
              >
                testName
                 
                testSurname
              </h2>
              <p
                class="user__birthday"
              >
                <span
                  class="user__type"
                >
                  birthday: 
                </span>
                <span
                  class="user__text"
                >
                  07.04.2022
                </span>
              </p>
              <p
                class="user__location"
              >
                <span
                  class="user__type"
                >
                  country: 
                </span>
                <span
                  class="user__text"
                >
                  Belarus
                </span>
              </p>
              <p
                class="user__gender"
              >
                <span
                  class="user__type"
                >
                  gender: 
                </span>
                <span
                  class="user__text"
                >
                  Female
                </span>
              </p>
            </div>
          </div>
          <div
            class="user"
          >
            <img
              class="user__img"
            />
            <div
              class="user__info"
            >
              <h2
                class="user__name"
              >
                testName
                 
                testSurname
              </h2>
              <p
                class="user__birthday"
              >
                <span
                  class="user__type"
                >
                  birthday: 
                </span>
                <span
                  class="user__text"
                >
                  07.04.2022
                </span>
              </p>
              <p
                class="user__location"
              >
                <span
                  class="user__type"
                >
                  country: 
                </span>
                <span
                  class="user__text"
                >
                  Belarus
                </span>
              </p>
              <p
                class="user__gender"
              >
                <span
                  class="user__type"
                >
                  gender: 
                </span>
                <span
                  class="user__text"
                >
                  Female
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="itemList"
    >
      <div
        class="itemList__wrapper"
      >
        <div
          class="user"
        >
          <img
            class="user__img"
          />
          <div
            class="user__info"
          >
            <h2
              class="user__name"
            >
              testName
               
              testSurname
            </h2>
            <p
              class="user__birthday"
            >
              <span
                class="user__type"
              >
                birthday: 
              </span>
              <span
                class="user__text"
              >
                07.04.2022
              </span>
            </p>
            <p
              class="user__location"
            >
              <span
                class="user__type"
              >
                country: 
              </span>
              <span
                class="user__text"
              >
                Belarus
              </span>
            </p>
            <p
              class="user__gender"
            >
              <span
                class="user__type"
              >
                gender: 
              </span>
              <span
                class="user__text"
              >
                Female
              </span>
            </p>
          </div>
        </div>
        <div
          class="user"
        >
          <img
            class="user__img"
          />
          <div
            class="user__info"
          >
            <h2
              class="user__name"
            >
              testName
               
              testSurname
            </h2>
            <p
              class="user__birthday"
            >
              <span
                class="user__type"
              >
                birthday: 
              </span>
              <span
                class="user__text"
              >
                07.04.2022
              </span>
            </p>
            <p
              class="user__location"
            >
              <span
                class="user__type"
              >
                country: 
              </span>
              <span
                class="user__text"
              >
                Belarus
              </span>
            </p>
            <p
              class="user__gender"
            >
              <span
                class="user__type"
              >
                gender: 
              </span>
              <span
                class="user__text"
              >
                Female
              </span>
            </p>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
